# lightcone-feed

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: API.md  ARCHITECTURE.md  CONTRACT.md  EXAMPLES.md  LIVE.md  README.md
lightcone/: __init__.py  bar.py  config.py  contract.py  exceptions.py  feed.py  fill_sim.py  timeline.py
lightcone/tests/: test_adversarial.py  test_api_surface.py  test_external_mutation_isolation.py  test_extras_immutable.py  test_field_enforcement.py  test_fill_sim.py  test_no_lookahead_invariant.py  test_performance.py  test_real_data_integration.py  test_state_machine.py  test_time_ordering.py  test_view_hardening.py
